<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VCS Medicine Management System</string>
    <string name="roomSearchRadioButton">Room</string>
    <string name="statusSearchRadioButton">Status</string>
    <string name="alphabeticSearchRadioButton">A-Z</string>
    <string name="title_medication_list">ResidentMeds</string>
    <string name="title_medication_detail">Medication Detail</string>
    <string name="side_effects_title">SIDE EFFECTS</string>
    <string name="warnings_title">WARNINGS</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="notes_title">NOTES</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Search for resident...</string>
    <string name="search_button">Search</string>
    <string name="search_advanced">Advanced...</string>
    <string name="recent_residents">RECENT RESIDENTS</string>
    <string name="upcoming">UPCOMING</string>
    <string name="title_activity_walkthrough">Walkthrough</string>
    <string name="start_over_text">START OVER</string>
    <string name="call_nurse_text">CALL NURSE</string>
    <string name="give_med_string">GIVE THIS MED</string>
    <string name="title_activity_medication_fragment">MedicationFragment</string>
    <string name="get_resident_meds">MEDICATION...</string>
    <string name="resident_name">NAME</string>
    <string name="nurse_notes">NOTES:</string>
    <string name="other_diagnoses">OTHER DIAGNOSES: </string>

</resources>
