<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:focusableInTouchMode="true"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LandingPage" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/resident_search"
            android:layout_width="@dimen/search_bar_landing"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/search_hint"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textColor="@color/normal"
            android:textSize="@dimen/search_text" />

        <LinearLayout
            android:layout_width="@dimen/search_bar_landing"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/search_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@color/landing_background"
                android:fontFamily="sans-serif-thin"
                android:text="@string/search_button"
                android:textColor="@color/landing_title"
                android:textSize="@dimen/medium_text" />

            <Button
                android:id="@+id/advanced_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/landing_background"
                android:fontFamily="sans-serif-thin"
                android:text="@string/search_advanced"
                android:textColor="@color/landing_title"
                android:textSize="@dimen/medium_text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/landing_background"
            android:fontFamily="sans-serif-thin"
            android:padding="5dp"
            android:text="@string/recent_residents"
            android:textColor="@color/landing_title"
            android:textSize="@dimen/resident_title" />

        <LinearLayout
            android:id="@+id/recent_residents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp" >
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@color/contrast" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/upcomingResidentsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/landing_background"
                android:fontFamily="sans-serif-thin"
                android:padding="5dp"
                android:text="@string/upcoming"
                android:textColor="@color/landing_title"
                android:textSize="@dimen/resident_title" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>