<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:baselineAligned="false"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="horizontal"
    android:showDividers="middle"
    tools:context=".MedicationListActivity" >

    <!--
    This layout is a two-pane layout for the ResidentMeds
    master/detail flow. See res/values-large/refs.xml and
    res/values-sw600dp/refs.xml for an example of layout aliases
    that replace the single-pane version of the layout with
    this two-pane version.

    For more on layout aliases, see:
    http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
    -->

    <fragment
        android:id="@+id/medication_list"
        android:name="org.vcs.medmanage.MedicationListFragment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:layout="@android:layout/list_content" />

    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        >
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/section_title_text"
            android:text="@string/description_title"
            android:textSize="@dimen/medication_titles"
            android:fontFamily="sans-serif-light"
            />
        <FrameLayout
	        android:id="@+id/medication_detail_container"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
        	/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/section_title_text"
            android:text="@string/notes_title"
            android:textSize="@dimen/medication_titles"
            android:fontFamily="sans-serif-light"
            />
        <TextView 
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/detail_text"
            android:textSize="@dimen/medication_detail"
            android:background="@drawable/rounded_edges"
            android:fontFamily="sans-serif-light"
            />
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:divider="?android:attr/dividerVertical"
        android:showDividers="none"
        android:layout_weight="2">
        <ImageView
	        android:id="@+id/medication_picture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:fontFamily="sans-serif-light"
	        />
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/section_title_text"
            android:text="@string/side_effects_title"
            android:textSize="@dimen/medication_titles"
            android:fontFamily="sans-serif-light"
            />
        <TextView 
            android:id="@+id/side_effects"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edges"
            android:textColor="@color/detail_text"
            android:textSize="@dimen/medication_detail"
            android:fontFamily="sans-serif-light"
            />
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/section_title_text"
            android:text="@string/warnings_title"
            android:textSize="@dimen/medication_titles"
            android:fontFamily="sans-serif-light"
            />
        <TextView 
            android:id="@+id/warnings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edges"
            android:textColor="@color/detail_text"
            android:textSize="@dimen/medication_detail"
            android:fontFamily="sans-serif-light"
            />
        <Button 
            android:id="@+id/give_med_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/give_med_string"
            android:background="@drawable/rounded_edges_2"
            android:textColor="@color/walkthrough_button_text"
            android:padding="5dp"
            />
    </LinearLayout>
</LinearLayout>
